--- a/package.json
+++ b/package.json
@@ -15,17 +15,27 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.35",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
+    "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.8.4",
+    "expo": "^52.0.41",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.6",
-    "expo-font": "~13.0.3",
+    "expo-constants": "^17.0.8",
+    "expo-crypto": "~14.0.2",
+    "expo-font": "^13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
+    "expo-router": "^4.0.19",
     "expo-splash-screen": "~0.29.22",
+    "expo-sqlite": "^15.1.3",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
@@ -33,10 +43,16 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-calendars": "^1.1310.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
+    "react-native-paper-dropdown": "^2.3.1",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-tab-view": "^4.0.6",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -46,7 +62,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
+    "jest-expo": "^52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
